--- a/frontend/src/app/features/books/components/edit-book-form/edit-book-form.html
+++ b/frontend/src/app/features/books/components/edit-book-form/edit-book-form.html
@@ -2,7 +2,7 @@
    <form [formGroup]="form" class="mx-20 my-10 w-1/2">
       <div class="grid grid-cols-[auto_75%] gap-y-2 gap-x-5 [&>label]:justify-self-end">
          <label for="bookTitle" class="self-center">Titel:</label>
-         <input type="text" name="bookTitle" formControlName="title" class="form-text-input">
+         <input type="text" name="bookTitle" formControlName="title" class="form-text-input" autocorrect="off" autocapitalize="off" spellcheck="false">
          @if (form.get('title')?.invalid && formIsSubmitted) {
             @if (form.get('title')?.errors?.['required']) {
                <div></div>
@@ -31,7 +31,7 @@
          </div>
          
          <label for="yearWritten" class="self-center">Utgivningsår:</label>
-         <input type="number" formControlName="yearWritten" [max]="this.getCurrentYear()" class="form-text-input">
+         <input type="number" formControlName="yearWritten" [max]="this.getCurrentYear()" class="form-text-input" autocorrect="off" autocapitalize="off" spellcheck="false">
          @if (form.get('yearWritten')?.invalid) {
             @if (form.get('yearWritten')?.errors?.['max']) {
                <div></div>
@@ -72,7 +72,7 @@
          </select>
       
          <label for="isbn" class="self-center">ISBN:</label>
-         <input formControlName="isbn" class="form-text-input" >
+         <input formControlName="isbn" class="form-text-input"  autocorrect="off" autocapitalize="off" spellcheck="false">
          @if (form.get('isbn')?.invalid && formIsSubmitted) {
             @if (form.get('isbn')?.errors?.['pattern']) {
                <div></div>
@@ -90,14 +90,14 @@
          </select>
       
          <label for="copies" class="self-center">Antal exemplar:</label>
-         <input type="number" formControlName="copies" min="1" class="form-text-input">
+         <input type="number" formControlName="copies" min="1" class="form-text-input" autocorrect="off" autocapitalize="off" spellcheck="false">
       
          <label for="coverLink" class="self-center">Länk till omslag:</label>
-         <input type="text" formControlName="coverLink" class="form-text-input">
+         <input type="text" formControlName="coverLink" class="form-text-input" autocorrect="off" autocapitalize="off" spellcheck="false">
       
          <label for="rating">Betyg:</label>
          <div>
-            <input formControlName="rating" type="range" min="0" max="10" step="0.1">
+            <input formControlName="rating" type="range" min="0" max="10" step="0.1" autocorrect="off" autocapitalize="off" spellcheck="false">
             <span>{{ form.get('rating')?.value ?? "Ej betygsatt" }}</span>
          </div>
       </div>
