--- a/frontend/src/app/features/books/components/search-bar/search-bar.html
+++ b/frontend/src/app/features/books/components/search-bar/search-bar.html
@@ -1,6 +1,15 @@
 <div class="rounded-full bg-[#EEE7D3] text-headerbrown p-3 w-100 -mt-10">
    <i class="fa-solid fa-magnifying-glass ml-2"></i>
-   <input type="text" placeholder="SÖK BOK ELLER FÖRFATTARE" class="bg-transparent border-none outline-none w-8/10 ml-3" [value]="searchString()" (input)="searchString.set($any($event.target).value)" />
+   <input
+      type="text"
+      placeholder="SÖK BOK ELLER FÖRFATTARE"
+      class="bg-transparent border-none outline-none w-8/10 ml-3"
+      [value]="searchString()"
+      (input)="searchString.set($any($event.target).value)"
+      autocorrect="off"
+      autocapitalize="off"
+      spellcheck="false"
+   />
    @if (searchString() != '') {
       <i class="fa-regular fa-circle-xmark cursor-pointer text-lg ml-3 -mb-2" (click)="searchString.set('')"></i>
    }
