--- a/frontend/src/app/features/books/pages/all-books/all-books.html
+++ b/frontend/src/app/features/books/pages/all-books/all-books.html
@@ -21,7 +21,7 @@
       </div>
    </div>
 
-   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-4 mt-8 overflow-scroll overflow-x-hidden max-h-full">
+   <div #scrollContainer class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-4 mt-8 overflow-y-auto overflow-x-hidden">
       @if (booksSearched$ | async; as books ) {
          @for (book of books; track book.id) {
             <app-book-card [book]="book"></app-book-card>
