Fixa översvämning i redigera-vy (issue #150)

--- a/frontend/src/app/features/books/components/edit-book-form/edit-book-form.html
+++ b/frontend/src/app/features/books/components/edit-book-form/edit-book-form.html
@@ -1,5 +1,5 @@
 <div class="flex justify-center">
-   <form [formGroup]="form" class="mx-20 my-10 w-1/2">
+   <form [formGroup]="form" class="w-2/3">
       <div class="grid grid-cols-[auto_75%] gap-y-2 gap-x-5 [&>label]:justify-self-end">
          <label for="bookTitle" class="self-center">Titel:</label>
          <input type="text" name="bookTitle" formControlName="title" class="form-text-input" autocorrect="off" autocapitalize="off" spellcheck="false">
