--- a/frontend/src/app/features/books/components/book-card/book-card.html
+++ b/frontend/src/app/features/books/components/book-card/book-card.html
@@ -1,4 +1,4 @@
-<div class="flex items-start w-90">
+<div class="flex items-start">
    <div class="w-4/10 aspect-[2/3] mb-10 flex items-start justify-center overflow-hidden shrink-0">
       <img [src]="book.coverLink ? book.coverLink : 'book-cover-placeholder.png'" alt="Omslagsbild för {{ book.title }}" class="cursor-pointer block h-full w-auto max-w-full max-h-full object-contain object-top" [routerLink]="'/books/' + book.id">
    </div>
