--- a/frontend/src/app/features/header/components/burger-menu/burger-menu.html
+++ b/frontend/src/app/features/header/components/burger-menu/burger-menu.html
@@ -16,7 +16,7 @@
    <div class="flex w-full justify-end">
       <div class="mt-5 mr-7 cursor-pointer" (click)="closeMenu()">X</div>
    </div>
-   <div class="w-full flex flex-col items-center" (click)="closeMenuOnLinkClick($event)">
+   <div class="w-full h-full flex flex-col items-center" (click)="closeMenuOnLinkClick($event)">
       <ng-content></ng-content>
    </div>
 </div>
