--- a/frontend/src/app/features/header/components/header/header.html
+++ b/frontend/src/app/features/header/components/header/header.html
@@ -1,6 +1,6 @@
 <header class="w-full h-23 bg-headerbrown flex justify-between items-center">
    <div class="ml-20 w-1/2 flex">
-      @if (auth.user$ | async; as user) {
+      @if (auth.user$ | async) {
          <app-burger-menu backgroundColor="backgroundbeige" class="mr-30">
             <div class="h-full flex flex-col justify-between">
                <div class="flex flex-col">
@@ -61,12 +61,11 @@
    </div>
 
 
-   @if (auth.user$ | async; as user) {
+   @if (auth.user$ | async) {
       <div class="mr-6 relative group select-none pb-2">
          <div
             class="w-10 h-10 rounded-full bg-backgroundbeige text-headerbrown flex items-center justify-center font-semibold shadow cursor-pointer"
             aria-haspopup="true"
-            aria-expanded="false"
          >
             U
          </div>
@@ -79,7 +78,7 @@
                <div class="px-4 py-2 text-gray-400 cursor-not-allowed" aria-disabled="true">Min profil</div>
                <div class="px-4 py-2 text-gray-400 cursor-not-allowed" aria-disabled="true">Inställningar</div>
                <div class="my-2 border-t border-gray-200"></div>
-               <div class="px-4 py-2 cursor-pointer hover:bg-backgroundbeige" (click)="logout()">Logga ut</div>
+               <button class="px-4 py-2 cursor-pointer hover:bg-backgroundbeige w-full text-left" (click)="logout()">Logga ut</button>
             </div>
          </div>
       </div>
